04exercise-escape-sequences-and-comments/error.txt
EscapeSequencesComments.java:1: error: class EscapeSecuencesComments is public, should be declared in a file named EscapeSecuencesComments.java
public class EscapeSecuencesComments {
       ^
1 error
